<resources>
    <string name="app_name">Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="set_up_quiz">Set up a Quiz</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>
    <string name="chose_number">Select number of questions:</string>
    <string name="chose_difficulty">Select difficulty:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="select_categories">Select categories:</string>
    <string name="arts">Arts</string>
    <string name="films">Films</string>
    <string name="food">Food</string>
    <string name="general">General</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="music">Music</string>
    <string name="science">Science</string>
    <string name="society">Society</string>
    <string name="sport">Sport</string>
    <string name="submit">Submit</string>
    <string name="favorite">Favorite</string>
    <string name="error_message">Something went wrong.</string>
    <string name="question">Question:</string>
    <string name="backslash">/</string>
    <string name="start_new_quiz">Start new quiz</string>
    <string name="first">1. %1$s</string>
    <string name="second">2. %1$s</string>
    <string name="third">3. %1$s</string>
    <string name="forth">4. %1$s</string>
    <string name="quiz_result">Quiz Result: %1$s out of %2$s</string>
    <string name="save_date">Save date: %1$s</string>
    <string name="difficulty">Difficulty: %1$s</string>
    <string name="number_of_questions">Number of questions: %1$s</string>
    <string name="category">Category: %1$s</string>
    <string name="liked_quiz">Liked Quiz</string>
    <string name="empty_quiz_list">List is empty</string>
    <string name="successful_save">Quiz is saved</string>
</resources>