<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp"
    android:layout_marginHorizontal="12dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_save_date"
        style="@style/Widget.Quiz.TextView.QuizItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Save date: 22.06.2001" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_difficulty"
        style="@style/Widget.Quiz.TextView.QuizItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_save_date"
        tools:text="Difficulty: HARD" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_number_of_questions"
        style="@style/Widget.Quiz.TextView.QuizItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_difficulty"
        tools:text="Number of questions: 15" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_category"
        style="@style/Widget.Quiz.TextView.QuizItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_number_of_questions"
        tools:text="Category: Sport, Films, Art,Sport, Films, Art,Sport, Films, Art,Sport, Films, Art,Sport, Films, Art,Sport, Films, Art" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>